--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,3 +36,10 @@ body {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.modelSummaryExtensionIcon {
+    background-image: url(https://github.com/encharm/Font-Awesome-SVG-PNG/raw/master/white/png/24/dashboard.png);
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
